--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -281,7 +281,7 @@
        (lsp lsp-deferred)
        :hook
        (lsp-mode . sme/lsp-mode-setup)
-	   ((c++-mode typescript-mode js2-mode web-mode) . lsp)
+	   ((c++-mode typescript-mode js2-mode web-mode css-mode scss-mode) . lsp)
        :init
        (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
        :custom
@@ -436,16 +436,15 @@
        :config
        (setq prettier-js-show-errors nil))
    #+end_src
-
+   
 ** HTML
    #+begin_src emacs-lisp
 	 (use-package web-mode
-	   :mode "(\\.\\(html?\\|ejs\\|tsx\\|jsx\\)\\'"
+	   :mode ("\\.html?\\'" . web-mode)
 	   :config
 	   (setq-default web-mode-code-indent-offset 2)
 	   (setq-default web-mode-markup-indent-offset 2)
 	   (setq-default web-mode-attribute-indent-offset 2))
-
 
 	 (use-package emmet-mode
 	   :hook (web-mode . emmet-preview-mode)
