--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -273,25 +273,29 @@
 ** Setting up LSP Mode
    
    #+begin_src emacs-lisp
-     (defun sme/lsp-mode-setup ()
-       (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
-       (lsp-headerline-breadcrumb-mode))
-     (use-package lsp-mode
-       :commands
-       (lsp lsp-deferred)
-       :hook
-       (lsp-mode . sme/lsp-mode-setup)
+	 (defun sme/lsp-mode-setup ()
+	   (setq lsp-headerline-breadcrumb-segments '(path-up-to-project file symbols))
+	   (lsp-headerline-breadcrumb-mode))
+	 (use-package lsp-mode
+	   :commands
+	   (lsp lsp-deferred)
+	   :hook
+	   (lsp-mode . sme/lsp-mode-setup)
 	   ((c++-mode typescript-mode js2-mode web-mode css-mode scss-mode) . lsp)
-       :init
-       (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
-       :custom
-       (lsp-rust-analyzer-server-display-inlay-hints t)
-       :config
-       (lsp-enable-which-key-integration t))
+	   :init
+	   (setq lsp-keymap-prefix "C-c l")  ;; Or 'C-l', 's-l'
+	   :custom
+	   (lsp-rust-analyzer-server-display-inlay-hints t)
+	   :config
+	   (lsp-enable-which-key-integration t))
 
-     (use-package lsp-ivy)
+	 (with-eval-after-load 'lsp-mode
+	   (add-to-list 'lsp-language-id-configuration
+					'("\\.scss\\'" . "scss")))
+
+	   (use-package lsp-ivy)
    #+end_src
-
+   
 ** Setting up DAP Mode
    
    #+begin_src emacs-lisp
@@ -431,24 +435,37 @@
 	   ;; Set up proper indentation in JavaScript and JSON files
 	   (add-hook 'js2-mode-hook #'sme/set-js-indentation)
 	   (add-hook 'json-mode-hook #'sme/set-js-indentation))
-    (use-package prettier-js
-       :hook ((js2-mode . prettier-js-mode))
-       :config
-       (setq prettier-js-show-errors nil))
+	 (use-package prettier-js
+	   :hook (web-mode . prettier-js-mode)
+	   :config
+	   (setq prettier-js-show-errors nil))
    #+end_src
    
 ** HTML
    #+begin_src emacs-lisp
+	 (use-package emmet-mode
+	   :mode ("\\.html?\\'" . emmet-mode)
+	   :bind ("C-l" . emmet-expand-line))
+
+	 (defun sme/web-mode-setup()
+	   (set (make-local-variable
+			 'company-backends) '((
+								   company-web-html
+								   company-css
+								   company-dabbrev-code
+								   company-dabbrev
+								   ))))
+
 	 (use-package web-mode
-	   :mode ("\\.html?\\'" . web-mode)
+	   :mode (("\\.html?\\'" . web-mode)
+			  ("\\.css\\'" . web-mode)
+			  ("\\.scss\\'" . web-mode)
+			  ("\\.js\\'" . web-mode))
+	   :hook (web-mode . sme/web-mode-setup)
 	   :config
 	   (setq-default web-mode-code-indent-offset 2)
 	   (setq-default web-mode-markup-indent-offset 2)
 	   (setq-default web-mode-attribute-indent-offset 2))
-
-	 (use-package emmet-mode
-	   :hook (web-mode . emmet-preview-mode)
-	   :bind ("C-j" . emmet-expand-line))
    #+end_src  
 	
 ** Misc
