--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -38,8 +38,8 @@
 ** Font Settings
 
    #+begin_src emacs-lisp
-	 (set-face-attribute 'default nil :font "Fira Code Nerd Font Mono" :height 120)
-	 (set-face-attribute 'fixed-pitch nil :font "Fira Code Nerd Font Mono" :height 120)
+	 (set-face-attribute 'default nil :font "MesloLGS Nerd Font Mono" :height 120)
+	 (set-face-attribute 'fixed-pitch nil :font "MesloLGS Nerd Font Mono" :height 120)
 	 (set-face-attribute 'variable-pitch nil :font "Roboto" :height 120 :weight 'regular)
    #+end_src
 
