--- a/.emacs.d/README.org
+++ b/.emacs.d/README.org
@@ -101,7 +101,7 @@
        :config
        (setq doom-themes-enable-bold t    ; if nil, bold is universally disabled
 	     doom-themes-enable-italic t) ; if nil, italics is universally disabled
-       (load-theme 'doom-palenight t)
+       (load-theme 'doom-xcode t)
        (doom-themes-neotree-config)
        (doom-themes-org-config))
    #+end_src
